--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,12 +10,12 @@
 	font-family: "cachifyIcons";
 }
 #dashboard_right_now .cachify-icon--hdd:before {
-	margin: 3px 7px 0 2px;
+	margin: 2px 2px 0;
 	content: "\e801";
 	font-size: 16px;
 }
 #dashboard_right_now .cachify-icon--db:before {
-	margin: 1px 9px 0 3px;
+	margin: 0 4px 0 3px;
 	content: "\e802";
 	font-size: 18px;
 }
