Add Redis and Memcache backend  + Italian Translation
Add preliminary support for Redis backend (need to test)
Add preliminary support for Memcache backend (need to test) 
Dashboard size of cache relative to current site (only Redis and Memcache backends)
Dashboard add cached pages relative to current site (only Redis and Memcache backends) 
Rename variable METHOD_MMC to METHOD_MEMCACHED to avoid misunderstandings 
Add Italian Translation + POT file

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -20,7 +20,9 @@
 	font-size: 18px;
 }
 #dashboard_right_now .cachify-icon--apc:before,
-#dashboard_right_now .cachify-icon--memcached:before {
+#dashboard_right_now .cachify-icon--memcached:before,
+#dashboard_right_now .cachify-icon--redis:before,
+#dashboard_right_now .cachify-icon--memcache:before {
 	margin: 3px 2px 0 0;
 	content: "\e800";
 	font-size: 13px;
