move dark-mode styling into dashboard.css
Dark mode styling has been added inline using the "doing_dark_mode" hook
which is no longer called in current plugin versions.

Include the CSS definition directly into dashboard.css and deprecate the
hook for adding inline styles.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,6 +5,10 @@
 	fill: #606a73;
 }
 
+html.dark-mode body:not(.block-editor-page) #dashboard_right_now .cachify-icon {
+	fill: #bbc8d4;
+}
+
 #dashboard_right_now li a.cachify-glance::before {
 	content: "";
 	padding: 0;
